[package]
name = "pkg"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.26", features = ["color"] }
clap = { version = "3.2", features = ["derive"] }

zip = "0.6.2"
glob = "0.3.0"